--- a/style.css
+++ b/style.css
@@ -28,12 +28,12 @@ canvas {
 }
 
 h1 {
-    color: #e63946;
+    color: #4e040a;
     font-size: 26px;
 }
 
 .message {
-    margin-top: 15px;
+    margin-top: 60px;
     font-size: 18px;
 }
 
